--- a/CV.tex
+++ b/CV.tex
@@ -39,7 +39,7 @@
 	%	Summary / Objectives
 	%----------------------------------------------------------------------------------------
     \cvSection{O mnie}	
-    \CVTextBlock{ Zmotywowany inżynier automatyki i robotyki wyposażony w blisko trzy i pół roku doświadczenia w zakresie sprzętu i oprogramowania. Od początku w dziedzinie awioniki UTM i UAV, w szczególności dronów. Zawsze szukający nowych wyzwań i poszerzania wiedzy.}
+    \CVTextBlock{ Zmotywowany inżynier automatyki i robotyki posiadający blisko trzy i pół roku doświadczenia w zakresie sprzętu i oprogramowania. Od początku w dziedzinie awioniki UTM i UAV, w szczególności dronów. Zawsze szukający nowych wyzwań i poszerzania wiedzy.}
 	%---------------------------------------------------------------------------------------
 	%	Current Position
 	%----------------------------------------------------------------------------------------
@@ -76,7 +76,7 @@
 		   - pisanie bloków testujących sprzęt z wykorzystaniem komunikacji UART/USB, oraz testy oprogramowania,
             aplikacje obsługujące bazy danych (DB, SQLite), 
             wyciąganie tabel ze stron www i obróbka danych, \newline 
-        \textbf{Github} - tworzenie oraz utrzymywanie CI zgodnie z wytycznymi projektów, \newline
+        \textbf{Github/yml} - tworzenie oraz utrzymywanie CI zgodnie z wytycznymi projektów, \newline
         \textbf{Latex} - sporządzanie dokumentacji technicznej, jak i dokumentacji sprzedażowej, \newline
         \textbf{matlab} - korzystanie z global optymalization toolbox w celu generowania trajektorii robota mobilnego, \newline
         \textbf{C} - proste programy obsługujące Atmege32 z wykorzystaniem sensorów, \newline
