--- a/CV.tex
+++ b/CV.tex
@@ -61,7 +61,7 @@
 %	\cvSection{Experience (Research \& Industry)}
 	\cvSection{Doświadczenie}
 	\CVBlockWithTime{Tester sprzętu i oprogramowania}{1/2022 - obecnie}{Aerobits Sp. z o.o.}{Szczecin, Polska}
-	{Pisanie testów sprzętowych z wykorzystaniem jezyka Python, Linux/Bash, walidacja oprogramowania oraz sporządzanie dokumentacji technicznej}	
+	{Pisanie testów sprzętowych z wykorzystaniem jezyka Python, Linux/Bash z wykorzystaniem analizatora widma, walidacja oprogramowania oraz sporządzanie dokumentacji technicznej}	
     \CVBlockWithTime{Inżynier Elektronik}{8/2021 - 12/2021}{Aerobits Sp. z o.o.}{Szczecin, Polska}
 	{Montaż prototypowych modułów radiowych, diagnostyka uszkodzeń oraz sporządzanie dokumentacji technicznej} 
     \CVBlockWithTime{Technik Elektronik}{7/2019 - 8/2021}{Aerobits Sp. z o.o.}{Szczecin, Polska}
