--- a/CV_ang.tex
+++ b/CV_ang.tex
@@ -60,7 +60,7 @@
 %	\cvSection{Experience (Research \& Industry)}
 	\cvSection{Expierience}
 	\CVBlockWithTime{Hardware and software tester}{1/2022 - current}{Aerobits Sp. z o.o.}{Szczecin, Poland}
-	{Writing hardware tests using Python, Linux/Bash language, validating software and preparing technical documentation}	
+	{Writing hardware tests using Python, Linux/Bash language with a Spectrum analyzer, validating software and preparing technical documentation}	
     \CVBlockWithTime{Electronics Engineer}{8/2021 - 12/2021}{Aerobits Sp. z o.o.}{Szczecin, Poland}
 	{Assembly of prototype radio modules, fault diagnosis and preparation of technical documentation} 
     \CVBlockWithTime{Electronics Technician}{7/2019 - 8/2021}{Aerobits Sp. z o.o.}{Szczecin, Poland}
